# FEM

./: .gitignore  1D_FEM.py  CMakeLists.txt  FEM_1D.py  fem.py  pyproject.toml  requirements.txt  uebungen.py  validate_1d.py
helper_funcs/: visualizations.py
src/: FEM_1D.py  colors.py  fem.py
src_cpp/: FEM_1D.cpp  FEM_1D.hpp  README.md  binding.cpp  main.cpp  main.py
uebungen/: time-linalg_solve.txt  uebungen.py
validations/: validate_1d.py  validate_1d_cpp.py
