[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fem-project"
version = "0.1.0"
description = "FEM project"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "numba"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 120

[tool.autopep8]
max_line_length = 120
