[build-system]
requires = ["setuptools", "scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fem-project"
version = "0.1.0"
description = "FEM project"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "numba"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "bin*"]

[tool.black]
line-length = 120

[tool.autopep8]
max_line_length = 120
